grammar/grammar.ebnf
(*
    VASM Grammar
*)

(* DONE *)
program :=
    program_statement *
;

(* DONE *)
program_statement :=
    data
|   label
|   statement "\n"
|   directive "\n"
|   comment "\n"
| "\n"
;

(* DONE *)
data := 
    "db" [constant { ", " constant } * ]
    "dw" [constant { ", " constant } * ]
    "dd" [constant { ", " constant } * ]
;

(* DONE *)
comment :=
    ";" .*
;

(* DONE *)
label :=
    ident ':'
;

(* DONE *)
directive :=
    '#' directive_command
;

(* DONE *)
directive_command :=
    "align" number
;

(* DONE *)
statement :=
    command [ argument [ "," argument ] ]
;

(* not case sensitive *)
command :=
    "add"
|   "addf"
|   "sub"
|   "subf"
    ...
;

(* DONE *)
argument := 
    constant
|   register
|   "[" register [ "+" constant ] "]"
;

(* DONE *)
constant :=
    constant_term [ binary_op constant ]
;

(* DONE *)
constant_term :=
    number
|   ident
|   "[" constant "]"
|   unary_op constant_term
|   "(" constant ")"
;

(* DONE *)
unary_op :=
    "!"
|   "~"
|   "-"
;

(* DONE *)
binary_op :=
    "+"
|   "-"
|   "*"
|   "/"
|   "%"
|   "<<"
|   "<<<"
|   ">>"
|   ">>>"
|   "|"
|   "||"
|   "&"
|   "&&"
|   "^"
|   "**"
|   "<"
|   "<="
|   ">="
|   ">"
|   "=="
|   "!="
;

(* DONE *)
ident :=
    (a-zA-Z_) (a-zA-Z0-9_) *
;

(* DONE *)
number :=
    "0b" (01) +
|   "0o" (0-7) +
|   (1-9) (0-9) * [ "." (0-9) + ]
|   "0x" (0-9a-fA-F) +
;

(* DONE *)
register :=
    "%A"
|   "%B"
|   "%C"
    ...
|   "%SP"
|   "%BP"
|   "%FG"
|   "%PC"
;
